Fixed contact form Submit button spacing

--- a/less/contact.less
+++ b/less/contact.less
@@ -49,7 +49,7 @@ form {
         color: white; 
         background: @darker;
         height: 50px;
-        padding-top: 2.5%;
+        padding-top: 15px;
         cursor: pointer;
         &:hover {
             background-color: @hacker;
